# toon-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml  reviewdog-python.yml  test.yml
scripts/: generate_complex_fixtures.py
src/deccan_toon/: decoder.py  encoder.py
tests/: test.py  test_complex_structures.py  test_fixtures.py  test_functional.py  test_fuzz.py  test_security.py  test_v3_compliance.py
tests/testdata/complex/: mixed_schema_arrays.toon  nested_depth.toon  real_world_config.toon
tests/testdata/fixtures/: global_text.toon  large_payload.toon  syntax_edge_cases.toon  typing_strictness.toon
