[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "deccan-toon"
version = "0.1.0"
description = "Battling JSON bloat with Pythonic elegance. A high-efficiency TOON serializer."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Deccan Tensor Labs", email = "saurabhdugdhe18@gmail.com" }]
keywords = ["toon", "json", "llm", "ai", "serialization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Deccan-Tensor/toon-py"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"
mypy = "^1.0"
bandit = "^1.7"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
